syntax = "proto3";

                 package keywordEntry;
service KeywordEntryService {
 rpc createKeywordEntry (KeywordEntryCreateInput) returns (KeywordEntry) {}
rpc keywordEntries (findManyParams) returns (stream KeywordEntry) {}
rpc keywordEntry (KeywordEntryWhereUniqueInput) returns (KeywordEntry) {}
rpc updateKeywordEntry (KeywordEntryUpdateInput) returns (KeywordEntry) {}
rpc deleteKeywordEntry (KeywordEntryWhereUniqueInput) returns (KeywordEntry) {} 
 }
message KeywordEntryCreateInput {
string createdAt = 1;
string id = 2;
string keywordText = 3;
string updatedAt = 4;
};
message KeywordEntry {
string createdAt = 1;
string id = 2;
string keywordText = 3;
string updatedAt = 4;
};
message KeywordEntryWhereUniqueInput {
string createdAt = 1;
string id = 2;
string keywordText = 3;
string updatedAt = 4;
};
message KeywordEntryUpdateInput {
string createdAt = 1;
string id = 2;
string keywordText = 3;
string updatedAt = 4;
};
message findManyParams {

};